<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexaguilar.infopersonal.ConfirmarDatos">

    <TextView
        android:id="@+id/TituloConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TituloConfirmar"
        android:textSize="@dimen/letraTituloConfirmar"
        android:layout_centerHorizontal="true"
        android:textColor="@color/titulo"
        />

    <TextView
        android:id="@+id/tvConfNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreConf"
        android:textSize="@dimen/tamanioDatos"
        android:layout_below="@+id/TituloConfirmar"
        android:layout_marginTop="@dimen/marginTopDatos"
        android:textColor="@color/colorDatos"/>

    <TextView
        android:id="@+id/tvConfFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaConf"
        android:textSize="@dimen/tamanioDatos"
        android:layout_below="@+id/tvConfNombre"
        android:layout_marginTop="@dimen/marginDatos"
        android:textColor="@color/colorDatos"/>

    <TextView
        android:id="@+id/tvConfTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telConf"
        android:textSize="@dimen/tamanioDatos"
        android:layout_below="@+id/tvConfFecha"
        android:layout_marginTop="@dimen/marginDatos"
        android:textColor="@color/colorDatos"/>

    <TextView
        android:id="@+id/tvConfEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailConf"
        android:textSize="@dimen/tamanioDatos"
        android:layout_below="@+id/tvConfTelefono"
        android:layout_marginTop="@dimen/marginDatos"
        android:textColor="@color/colorDatos"/>

    <TextView
        android:id="@+id/tvConfDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descConf"
        android:textSize="@dimen/tamanioDatos"
        android:layout_below="@+id/tvConfEmail"
        android:layout_marginTop="@dimen/marginDatos"
        android:textColor="@color/colorDatos"/>

    <Button
        android:id="@+id/btnBotonEdicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvConfDescripcion"
        android:layout_marginTop="@dimen/marginTopBoton"
        android:text="@string/tituloBotonEdicion"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorDatos"/>

</RelativeLayout>
