<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexaguilar.infopersonal.MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Nombre"
        android:textColor="@color/lineas"
        />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNombreUsuario"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Telefono"
        android:textColor="@color/lineas"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:textColor="@color/lineas"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:textColor="@color/lineas"/>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:theme="@style/MiBotonRaised"
         />


</LinearLayout>

</ScrollView>